samples/_failures_safe/1761328604_dc24ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b44b14e.c: In function ‘process_input’:
./samples/SAFE/__tmp_8b44b14e.c:119:13: error: expected declaration or statement at end of input
  119 |             return -1;
      |             ^~~~~~
./samples/SAFE/__tmp_8b44b14e.c:119:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b44b14e.c:119:13: error: expected declaration or statement at end of input
